; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/posix1e/extr_acl_to_text.c_acl_to_text_np.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/posix1e/extr_acl_to_text.c_acl_to_text_np.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @acl_to_text_np(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %12

10:                                               ; preds = %3
  %11 = load i32, i32* @EINVAL, align 4
  store i32 %11, i32* @errno, align 4
  store i8* null, i8** %4, align 8
  br label %27

12:                                               ; preds = %3
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @_acl_brand(i32* %13)
  switch i32 %14, label %25 [
    i32 128, label %15
    i32 129, label %20
  ]

15:                                               ; preds = %12
  %16 = load i32*, i32** %5, align 8
  %17 = load i32*, i32** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i8* @_posix1e_acl_to_text(i32* %16, i32* %17, i32 %18)
  store i8* %19, i8** %4, align 8
  br label %27

20:                                               ; preds = %12
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i8* @_nfs4_acl_to_text_np(i32* %21, i32* %22, i32 %23)
  store i8* %24, i8** %4, align 8
  br label %27

25:                                               ; preds = %12
  %26 = load i32, i32* @EINVAL, align 4
  store i32 %26, i32* @errno, align 4
  store i8* null, i8** %4, align 8
  br label %27

27:                                               ; preds = %25, %20, %15, %10
  %28 = load i8*, i8** %4, align 8
  ret i8* %28
}

declare dso_local i32 @_acl_brand(i32*) #1

declare dso_local i8* @_posix1e_acl_to_text(i32*, i32*, i32) #1

declare dso_local i8* @_nfs4_acl_to_text_np(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
